fix: Wrap button group if necessary

--- a/private/sass/components/_button-group.scss
+++ b/private/sass/components/_button-group.scss
@@ -7,6 +7,7 @@
 
 .frontend-button-group {
     display: inline-flex;
+    flex-wrap: wrap;
     margin-inline-end: 1em;
     .btn {
         box-sizing: border-box;
